# spout_mouse

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  test_script.py
.github/workflows/: pytest.yml
spout_mouse/: __init__.py  analysis.py  config.py  data_loading.py  data_processing.py  fiber_photometry.py  plotting.py  signal_processing.py  utils.py
tests/: test_analysis.py  test_data_loading.py  test_data_processing.py  test_fiber_photometry.py  test_plotting.py  test_signal_processing.py  test_utils.py
