[metadata]
name = spout_mouse
version = 0.1.0
author = Daniel McAuley
author_email = dmcauley4@gmail.com
description = A Python package for processing and analyzing fiber photometry and lick/spout data from mouse trials.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danielmcauley/spout_mouse
project_urls =
    Documentation = https://spout_mouse.readthedocs.io
    Source = https://github.com/danielmcauley/spout_mouse
    Tracker = https://github.com/danielmcauley/spout_mouse/issues
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
keywords = neuroscience, fiber photometry, data analysis, biology

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas>=1.0
    numpy>=1.18
    matplotlib>=3.2
    seaborn>=0.10
    scipy>=1.4
    statsmodels>=0.11
    plotnine>=0.8
    scikit-learn>=0.22
    tqdm>=4.42
    gspread>=3.6
    google-auth>=1.11
    pingouin>=0.3.8
    tdt>=0.6.6
    pytest-mock>=3.0.0
include_package_data = True

[options.extras_require]
dev =
    pytest>=6.0
    pytest-mock>=3.0
    sphinx>=3.0
    sphinx_rtd_theme>=0.5
    sphinx-autodoc-typehints>=1.10
    black>=20.8b1
    flake8>=3.8
    pre-commit>=2.7

[options.package_data]
spout_mouse = py.typed

[options.entry_points]
console_scripts =
    fp-analysis = spout_mouse.cli:main
